made changes in the logo part

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class="" src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\landing.jpg" alt="background" srcset="">
 
              <section class="items">
-                 <img class="logo" src="c:\Users\Admin\Desktop\project4\images\logoBig.png" alt="logo" srcset="">
+                 <img class="logo" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\logoBig.png" alt="logo" srcset="">
                  <p class="title">We Provide The Best Food At The <strong class="j6">Right Place</strong></p>
              </section>
 
