--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
           <section class="head part">
 
-        <img class="" src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\landing.jpg" alt="background" srcset="">
+        <img class="" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\landing.jpg" alt="background" srcset="">
 
              <section class="items">
                  <img class="logo" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\logoBig.png" alt="logo" srcset="">
@@ -34,9 +34,9 @@
 
 
               <section class="morning">
-                <img class="tea" src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\fastFood1.jpg" alt="">
-                <img  class="glass" src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\\lunch.jpg" alt="" srcset="">
-                <img class="food" src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\dinner.jpg" alt="" srcset="">
+                <img class="tea" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\fastFood1.jpg" alt="">
+                <img  class="glass" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\lunch.jpg" alt="" srcset="">
+                <img class="food" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\dinner.jpg" alt="" srcset="">
               </section>
 
               <section class="texta">
