made changes on the source location of the fastfood images

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
              <section class="photo">
 
                 <section class="green" >
-                    <img class="green" src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\fastFood1.jpg" alt="" srcset="">
+                    <img class="green" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\fastFood1.jpg" alt="" srcset="">
                 </section>
 
                 <section class="pasks" >
-                    <img class="pasks" src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\fastFood2.jpg" alt="" srcset="">
+                    <img class="pasks" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\fastFood2.jpg" alt="" srcset="">
                 </section>
 
              </section>
