made changes on all images of all drinks in the html part

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
             </section>
 
             <section class="photosec">
-                <img class="image1" src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\drink1.jpg" alt="" srcset="">
-                <img class="image2" src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\drink2.jpg" alt="" srcset="">
+                <img class="image1" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\drink1.jpg" alt="" srcset="">
+                <img class="image2" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\drink2.jpg" alt="" srcset="">
             </section>
 
         </section>
