made changes in the images sizes of the drinks part as well

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
            
             
             <section class="backgroundphoto">
-                <img class="backg" src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\foodsBg.jpg" alt="" srcset="">
+                <img class="backg" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\foodsBg.jpg" alt="" srcset="">
             </section>
 
             <section class="backsize"></section>
