made changes on customer 3 photo

--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
                        <Section class="george1">
                         <H4 class="sub">Mark George</H4>
                         <p class=" about george"> Great! Menu is owesome, there foods are not only great but also in the right prices. I'll highly recommed them.</p>
-                        <img src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\images\p2.png" alt="" srcset="">
+                        <img src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\p2.png" alt="" srcset="">
                        </Section>
 
                        <Section class="george part">
                         <H4 class="sub">George Richard</H4>
                         <p class=" about george"> Great! Menu is owesome, there foods are not only great but also in the right prices. I'll highly recommed them.</p>
-                        <img src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\images\p3.png" alt="" srcset="">
+                        <img src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\p3.png" alt="" srcset="">
                        </Section>
 
                         
