made changes on the subscribe button photo

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <section class="tomato">
              
                  <section class="bg">
-                   <img src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\images\subscribe.jpg" alt="" srcset="">
+                   <img src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\subscribe.jpg" alt="" srcset="">
                  </section>
 
          <section class="centred">
