made changes on the white logo part and also the size of the image

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
            <section class="all">
 
                 <section class="logoarea">
-                   <img src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\logo_white.png" alt="" srcset="">
+                   <img src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\logo_white.png" alt="" srcset="">
                    <h3 class="menub">MENU</h3>
                 </section>
 
