--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 </section>
           
                 <section class="icons">
-                    <img src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\facebook.png" alt="" srcset="">
+                    <img src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\facebook.png" alt="" srcset="">
                     <img src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\twitter.png" alt="" srcset="">
                     <img src="c:\Users\Admin\Desktop\Moringa-Web\project4\images\pinterest.png" alt="" srcset="">
                 </section>
