made some photo change in the breakfast part

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
               <section class="morning">
-                <img class="tea" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\fastFood1.jpg" alt="">
+                <img class="tea" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\breakfast.jpg" alt="">
                 <img  class="glass" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\lunch.jpg" alt="" srcset="">
                 <img class="food" src="c:\Users\Admin\Desktop\Moringa-Web\project-4-final\images\dinner.jpg" alt="" srcset="">
               </section>
